--- a/src/main/resources/springjunittest.properties
+++ b/src/main/resources/springjunittest.properties
@@ -11,7 +11,8 @@
 # MySqlDb
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/junit?noAccessToProcedureBodies=true&autoReconnect=true
+#jdbc.url=jdbc:mysql://localhost:3306/junit?noAccessToProcedureBodies=true&autoReconnect=true
+jdbc.url=jdbc:mysql://172.17.0.3:3306/junit?noAccessToProcedureBodies=true&autoReconnect=true
 jdbc.username=root
 jdbc.password=
 
