--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,9 @@
 	<groupId>it.blog.springjunit</groupId>
 	<artifactId>SpringJunitTest</artifactId>
 	<packaging>war</packaging>
+	<build>
+   		<finalName>SpringJunitTest</finalName>
+ 	</build>
 	<version>1.0.0</version>
 	<name>SpringJunitTest Maven Webapp</name>
 	<url>http://maven.apache.org</url>
