--- a/pom.xml
+++ b/pom.xml
@@ -239,6 +239,7 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<finalName>SpringJunitTest</finalName>
 		<plugins>
 			<plugin>
 				<groupId>com.coderplus.maven.plugins</groupId>
